Fix tabs in dark mode

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -255,11 +255,11 @@ a.menu__link svg {
 
   &::after {
     position: absolute;
-    bottom: 1px;
+    bottom: 0;
     content: '';
     width: 100%;
     display: block;
-    border-bottom: 2px solid rgba($navy, .1);
+    border-bottom: 1px solid var(--ifm-color-emphasis-300);
   }
 
   & > .tab-item {
